kotlin-ide/idea/testData/multiModuleLineMarker/fromActualSecondaryConstructor/jvm/jvm.kt
actual class <!LINE_MARKER("descr='Has declaration in common module'")!>SecondaryConstructor<!> {
    actual <!LINE_MARKER("descr='Has declaration in common module'")!>constructor<!>(name: String, surname: String) {}
}


